# small-projects

./: .editorconfig  .gitignore  .pdm.toml  LICENSE  README.md  pyproject.toml
bulletin_board/: main.cgi  save.cgi  view.cgi
bulletinboard/: edit.cgi
chatserver/: chatserver.py  simple_chat.py
edit/: edit.cgi  index.html  save.cgi
game/: config.py  game.py  objects.py
gui/: gui.py
markup/: README.md  handlers.py  markup.py  rules.py  simple_markup.py  test_input.txt  test_output.html  util.py
news/: newsagent1.py  newsagent2.py
pagemaker/: pagemaker.py  parse_xml.py  website.py  website.xml
reportlab/: get_data.py  hello_report.py  predicted-solar-cycle.json  predicted-sunspot-radio-flux.txt  sunspot.py  sunspots.py  sunspots_proto.py
xml_rpc/: client.py
xmlrpc/: server.py
