[tool.poetry]
name = "small-projects"
version = "0.1.0"
description = ""
authors = ["Donald33 Wang <dongcheng6@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
reportlab = "^3.5.63"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
