[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Donald33 D. Nevermore", email = "donald33wang@gmail.com"},
]
dependencies = [
    "reportlab>=3.6.11",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
